new width policy

--- a/index.html
+++ b/index.html
@@ -25,17 +25,11 @@
 		<div class="cf strip" >
 			<div class="center-col">
 				<div class="banner" id="townDisplay"></div>
-			</div>
-			<div class="center-col">
 				<img class="centerimage" src="https://raw.githubusercontent.com/raulpenaguiao/towns_in_switzerland_locator/main/assets/images/swiss_cantons.svg" alt="Map of Switzerland with Cantons"> 
-			</div>
-			<div class="center-col">
 				<div class="btn">Confirm choice</div>
 				<div class="btn">Next town</div>
 				<div class="btn">Distance: <span id="distanceSpan"></span></div>
-			</div>
-			<div class="center-col" id="previousScores">
-			</div>
+				<div class="banner" id="previousScores"></div>
 		</div>
 		<script type="text/javascript" src="assets/js/main.js"></script>
 	</body>
