new logs to understand what is going on

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 					<span class="hiddenElement" id="coordinateDisplay">N: <span class="inputNumber" id="displayCoordinateN"></span>&#176, E: <span class="inputNumber" id="displayCoordinateE"></span>&#176</span>
 				</div>
 				<img class="centerimage" id="mapPicture" src="https://raw.githubusercontent.com/raulpenaguiao/towns_in_switzerland_locator/main/assets/images/swiss_cantons.svg" alt="Map of Switzerland with Cantons"> 
-				<div class="btn hiddenElement" id="btnConfirmChoice">Confirm choice</div>
 				<div class="btn" id="btnNextTown">Next town</div>
+				<div class="btn" id="btnChangeNumberOfTowns">Change number of towns</div><input class="" id="inputNumberTowns" type="number" value="20"></input>
+				<div class="btn hiddenElement flushright" id="btnConfirmChoice">Confirm choice</div>
 				<div class="banner">Distance: <span id="distanceSpan"></span></div>
 				<div class="pallet" id="previousScores"></div>
 		</div>
